# claude-code-playbook

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  _config.yml  article.md  index.md  marketplace.json
.claude-plugin/: plugin.json
.github/: FUNDING.yml
.omc/: project-memory.json
config/: hooks-example.json  settings-example.json  settings-full.json
docs/: account-setup.md  adoption-playbook.md  advanced-tool-use.md  advanced.md  agent-memory.md  agent-teams.md  anti-patterns.md  april-2026-briefing.md  audit-log-hook.md  auto-mode.md  awesome-claude-code.md  bmad.md  case-studies.md  channels.md  cheat-sheet.md  cli-reference.md  code-container.md  codex-parity.md  comparison.md  configuration.md  cost-and-observability.md  cost-guide.md  day-start-dashboard-brief.md  daydream-hook.md  enterprise-governance.md  enterprise.md  faq.md  getting-started.md  github-actions.md  guide.md  harness-pattern.md  harness.md  help.md  knowledge-and-context.md  legacy-modernization.md  local-models.md  mcp-servers.md  model-comparison.md  multi-model-orchestration.md  opus-4-7.md  (+25 more)
examples/: README.md  bug-fix-session.md  debugging-session.md  feature-session.md  multi-agent-session.md  refactoring-session.md
hooks/: HANDOFF.md  README.md  audit-log.sh  auto-simplify.sh  build-check.sh  codex-prepush-review.sh  commit-message-check.sh  daydream-engine-prompt.md  daydream-surface.sh  daydream.sh  env-guard.sh  hooks.json  (+21 more)
tools/cc-tools/: README.md  pyproject.toml
tools/cc-tools/cctools/: __init__.py  __main__.py  cache_radar.py  cost_ledger.py  jsonl.py  md_lint.py
(+250 files in other folders)
